Add CI/CD pipeline with GitHub Actions by resolving error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,13 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm test
+      run: npm test -- --watchAll=false
 
     - name: Build project
       run: npm run build
 
     - name: Deploy to GitHub Pages
+      if: success()
       run: |
         npm install -g gh-pages
         npm run deploy
