--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
     - name: Build project
       run: npm run build
 
+    - name: Configure Git user
+      run: |
+        git config --global user.email "saifec1127@gmail.com"
+        git config --global user.name "saifec1127"
+
     - name: Deploy to GitHub Pages
       if: success()
       run: |
