--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,21 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: 18
 
     - name: Install dependencies
       run: npm install
@@ -31,15 +34,8 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Configure Git user
-      run: |
-        git config --global user.email "saifec1127@gmail.com"
-        git config --global user.name "saifec1127"
-
-    - name: Deploy to GitHub Pages
-      if: success()
-      run: |
-        npm install -g gh-pages
-        npm run deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to GitHub pages
+      uses: JamesIves/github-pages-deploy-action@4.1.0
+      with:
+        branch: gh-pages
+        folder: build
