--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api-data-gitproject",
   "version": "0.1.0",
+  "homepage": "https://saifec1127.github.io/react-fetchapi-gitcicd",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
